# shiratamamochi-mashiro-unofficial-wiki

./: .gitignore  fetch.ps1  main.py  mkdocs.yml  pyproject.toml  twitter_embeds.json
.github/workflows/: check-links.yml
docs/: changelog.md  collab.md  costume.md  credits.md  disclaimer.md  goods.md  history.md  illustrations.md  index.md  membership.md  profile.md
docs/illustrations/: drawings.md  fanart.md  fanwork.md  portrait.md
docs/javascripts/: external-links.js  header-share.js  twitter-widgets.js
docs/music/: anison.md  bishoujo.md  cover.md  index.md  original.md  other.md  songlist.md  utawaku.md
docs/stream/: asmr.md  drawing.md  game.md  marshmallow.md  talk.md
docs/stylesheets/: custom.css
overrides/: main.html
scripts/: check_links.py  check_links_ignore.txt
