[project]
name = "mashiro-wiki"
version = "0.1.0"
description = "白玉餅ましろ 非公式wiki"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-macros-plugin>=1.0",
    "mkdocs-minify-plugin>=0.8",
    "youtube-transcript-api>=1.2.4",
]

[project.optional-dependencies]
dev = ["httpx>=0.27"]
transcribe = [
    "yt-dlp>=2025.1.0",
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
